--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,19 @@
 affine==2.2.1
 appnope==0.1.0
 asn1crypto==0.24.0
-atomicwrites==1.2.1
 attrs==18.2.0
 backcall==0.1.0
 bambi==0.1.1
-bleach==2.1.4
-boto3==1.8.9
-botocore==1.11.9
+bleach==3.0.2
+boto3==1.9.33
+botocore==1.12.33
 cachetools==2.1.0
-certifi==2018.8.24
+certifi==2018.10.15
 cffi==1.11.5
 chardet==3.0.4
-click==6.7
-click-plugins==1.0.3
-cligj==0.4.0
+Click==7.0
+click-plugins==1.0.4
+cligj==0.5.0
 cloudpickle==0.4.0
 colorcet==0.9.1
 cryptography==2.3.1
@@ -22,94 +21,83 @@ cycler==0.10.0
 decorator==4.3.0
 defusedxml==0.5.0
 descartes==1.1.0
-descarteslabs==0.11.2
+descarteslabs==0.13.1
 docutils==0.14
 entrypoints==0.2.3
 Fiona==1.7.13
-Flask==1.0.2
-future==0.16.0
+future==0.17.0
 geographiclib==1.49
-geojson==2.4.0
+geojson==2.4.1
 geopandas==0.4.0
-geopy==1.16.0
+geopy==1.17.0
 h5py==2.8.0
-html5lib==1.0.1
 idna==2.7
-ipykernel==4.9.0
-ipython==6.5.0
+ipykernel==5.1.0
+ipython==7.1.1
 ipython-genutils==0.2.0
-ipywidgets==7.4.1
-itsdangerous==0.24
-jedi==0.12.1
+ipywidgets==7.4.2
+jedi==0.13.1
 Jinja2==2.10
 jmespath==0.9.3
-joblib==0.12.4
+joblib==0.12.5
 jsonschema==2.6.0
 jupyter==1.0.0
 jupyter-client==5.2.3
-jupyter-console==5.2.0
+jupyter-console==6.0.0
 jupyter-core==4.4.0
 kiwisolver==1.0.1
-lanturn==0.1
 MarkupSafe==1.0
-matplotlib==2.2.3
+matplotlib==3.0.1
 mewtwo==0.2
-mistune==0.8.3
-more-itertools==4.3.0
+mistune==0.8.4
 mpld3==0.3
 munch==2.3.2
 nbconvert==5.4.0
 nbformat==4.4.0
-notebook==5.6.0
-numpy==1.15.1
+notebook==5.7.0
+numpy==1.15.3
 pandas==0.23.4
 pandocfilters==1.4.2
 parso==0.3.1
-patsy==0.5.0
+patsy==0.5.1
 pexpect==4.6.0
-pickleshare==0.7.4
-Pillow==5.2.0
-pluggy==0.7.1
-prometheus-client==0.3.1
-prompt-toolkit==1.0.15
+pickleshare==0.7.5
+prometheus-client==0.4.2
+prompt-toolkit==2.0.6
 protobuf==3.6.1
 psycopg2==2.7.5
 ptyprocess==0.6.0
-py==1.6.0
-pycparser==2.18
+pycparser==2.19
 Pygments==2.2.0
 pymc3==3.5
 pyOpenSSL==18.0.0
-pyparsing==2.2.0
+pyparsing==2.2.2
 pyproj==1.9.5.1
-pytest==3.8.0
-python-dateutil==2.7.3
+python-dateutil==2.7.5
 python-Levenshtein==0.12.0
-pytz==2018.5
+pytz==2018.7
 PyYAML==3.13
 pyzmq==17.1.2
-qtconsole==4.4.1
-rasterio==1.0.3
-requests==2.19.1
+qtconsole==4.4.2
+rasterio==1.0.9
+requests==2.20.0
 s3transfer==0.1.13
-scikit-learn==0.19.2
+scikit-learn==0.20.0
 scipy==1.1.0
 seaborn==0.9.0
 Send2Trash==1.5.0
 Shapely==1.6.4.post2
-simplegeneric==0.8.1
 six==1.11.0
 snuggs==1.4.2
 statsmodels==0.9.0
 terminado==0.8.1
-testpath==0.3.1
-Theano==1.0.2
-tornado==5.1
-tqdm==4.25.0
+testpath==0.4.2
+Theano==1.0.3
+tornado==5.1.1
+tqdm==4.28.1
 traitlets==4.3.2
-urllib3==1.23
+urllib3==1.24
 utm==0.4.2
 wcwidth==0.1.7
 webencodings==0.5.1
-Werkzeug==0.14.1
-widgetsnbextension==3.4.1
+widgetsnbextension==3.4.2
