--- a/requirements.txt
+++ b/requirements.txt
@@ -1,102 +1,123 @@
-affine==2.2.1
-appnope==0.1.0
-asn1crypto==0.24.0
-attrs==18.2.0
-backcall==0.1.0
-bambi==0.1.1
-bleach==3.0.2
-boto3==1.9.33
-botocore==1.12.33
-cachetools==2.1.0
-certifi==2018.10.15
-cffi==1.11.5
-chardet==3.0.4
-Click==7.0
-click-plugins==1.0.4
-cligj==0.5.0
-cloudpickle==0.4.0
-colorcet==0.9.1
-cryptography==2.3.1
+affine==2.3.0
+appdirs==1.4.4
+appnope==0.1.2
+argon2-cffi==20.1.0
+arviz==0.11.2
+async-generator==1.10
+attrs==20.3.0
+aws-requests-auth==0.4.3
+backcall==0.2.0
+bambi==0.3.0
+bleach==3.3.0
+boto3==1.10.45
+botocore==1.13.45
+certifi==2020.12.5
+cffi==1.14.5
+cftime==1.4.1
+chardet==4.0.0
+click==7.1.2
+click-plugins==1.1.1
+cligj==0.7.1
+colorcet==2.0.6
 cycler==0.10.0
-decorator==4.3.0
-defusedxml==0.5.0
-descartes==1.1.0
-descarteslabs==0.13.1
-docutils==0.14
-entrypoints==0.2.3
-Fiona==1.7.13
-future==0.17.0
-geographiclib==1.49
-geojson==2.4.1
-geopandas==0.4.0
-geopy==1.17.0
-h5py==2.8.0
-idna==2.7
-ipykernel==5.1.0
-ipython==7.1.1
+decorator==4.4.2
+defusedxml==0.6.0
+dill==0.3.3
+docutils==0.15.2
+elasticsearch==6.3.1
+entrypoints==0.3
+fastprogress==1.0.0
+filelock==3.0.12
+Fiona==1.8.18
+fire==0.4.0
+future==0.18.2
+geographiclib==1.50
+geojson==2.5.0
+geopandas==0.8.2
+geopy==2.1.0
+humanize==3.2.0
+idna==2.10
+importlib-metadata==3.7.0
+ipykernel==5.5.0
+ipython==7.20.0
 ipython-genutils==0.2.0
-ipywidgets==7.4.2
-jedi==0.13.1
-Jinja2==2.10
-jmespath==0.9.3
-joblib==0.12.5
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.2.3
-jupyter-console==6.0.0
-jupyter-core==4.4.0
-kiwisolver==1.0.1
-MarkupSafe==1.0
-matplotlib==3.0.1
+ipywidgets==7.6.3
+jedi==0.18.0
+Jinja2==2.11.3
+jmespath==0.10.0
+joblib==1.0.1
+jsonlines==1.2.0
+jsonschema==3.2.0
+jupyter-client==6.1.11
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+kiwisolver==1.3.1
+MarkupSafe==1.1.1
+matplotlib==3.3.4
+mewtwo @ file:///Users/dillon/src/mewtwo/mewtwo
 mistune==0.8.4
-mpld3==0.3
-munch==2.3.2
-nbconvert==5.4.0
-nbformat==4.4.0
-notebook==5.7.0
-numpy==1.15.3
-pandas==0.23.4
-pandocfilters==1.4.2
-parso==0.3.1
+mpld3==0.5.2
+munch==2.5.0
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.2
+nest-asyncio==1.5.1
+netCDF4==1.5.6
+notebook==6.2.0
+numpy==1.20.1
+packaging==20.9
+pandas==1.2.2
+pandocfilters==1.4.3
+param==1.10.1
+parso==0.8.1
 patsy==0.5.1
-pexpect==4.6.0
+pexpect==4.8.0
 pickleshare==0.7.5
-prometheus-client==0.4.2
-prompt-toolkit==2.0.6
-protobuf==3.6.1
-psycopg2==2.7.5
-ptyprocess==0.6.0
-pycparser==2.19
-Pygments==2.2.0
-pymc3==3.5
-pyOpenSSL==18.0.0
-pyparsing==2.2.2
-pyproj==1.9.5.1
-python-dateutil==2.7.5
-python-Levenshtein==0.12.0
-pytz==2018.7
-PyYAML==3.13
-pyzmq==17.1.2
-qtconsole==4.4.2
-rasterio==1.0.9
-requests==2.20.0
-s3transfer==0.1.13
-scikit-learn==0.20.0
-scipy==1.1.0
-seaborn==0.9.0
+Pillow==8.1.0
+prometheus-client==0.9.0
+prompt-toolkit==3.0.16
+psycopg2==2.8.6
+ptyprocess==0.7.0
+pyarrow==3.0.0
+pycparser==2.20
+pyct==0.4.8
+Pygments==2.8.0
+pymc3==3.11.1
+pyparsing==2.4.7
+pyproj==3.0.0.post1
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+python-Levenshtein==0.12.2
+pytz==2021.1
+PyYAML==5.4.1
+pyzmq==22.0.3
+quilt3==3.0.4
+rasterio==1.2.0
+requests==2.25.1
+ruamel.yaml==0.15.70
+s3transfer==0.2.1
+scikit-learn==0.22.1
+scipy==1.6.1
+seaborn==0.11.1
 Send2Trash==1.5.0
-Shapely==1.6.4.post2
-six==1.11.0
-snuggs==1.4.2
-statsmodels==0.9.0
-terminado==0.8.1
-testpath==0.4.2
-Theano==1.0.3
-tornado==5.1.1
-tqdm==4.28.1
-traitlets==4.3.2
-urllib3==1.24
-utm==0.4.2
-wcwidth==0.1.7
+Shapely==1.7.1
+six==1.15.0
+snuggs==1.4.7
+statsmodels==0.12.2
+termcolor==1.1.0
+terminado==0.9.2
+testpath==0.4.4
+Theano-PyMC==1.1.2
+tornado==6.1
+tqdm==4.58.0
+traitlets==5.0.5
+typing-extensions==3.7.4.3
+urllib3==1.24.3
+utm==0.7.0
+wcwidth==0.2.5
 webencodings==0.5.1
-widgetsnbextension==3.4.2
+widgetsnbextension==3.5.1
+xarray==0.17.0
+xattr==0.9.7
+zipp==3.4.0
