--- a/requirements.txt
+++ b/requirements.txt
@@ -55,7 +55,6 @@ jupyterlab-widgets==1.0.0
 kiwisolver==1.3.1
 MarkupSafe==1.1.1
 matplotlib==3.3.4
-mewtwo @ file:///Users/dillon/src/mewtwo/mewtwo
 mistune==0.8.4
 mpld3==0.5.2
 munch==2.5.0
@@ -121,3 +120,5 @@ widgetsnbextension==3.5.1
 xarray==0.17.0
 xattr==0.9.7
 zipp==3.4.0
+awscli==0.11.0
+awsebcli==3.2.2
